# localstack-python

./: README.md  pyproject.toml
src/docker/: docker-compose.yml  init-aws.sh
src/localstack_demo/: __init__.py
