[project]
name = "localstack-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Miguel ORTEGA",email = "miguel.ortega@biomerieux.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3 (>=1.39.11,<2.0.0)"
]

[tool.poetry]
packages = [{include = "localstack_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
